Added route list for counting stops and regex

--- a/trainroutesNotebook.ipynb
+++ b/trainroutesNotebook.ipynb
@@ -18822,6 +18822,154 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api_url_2 = 'https://api-v3.mbta.com/stops?filter[route_type]=0,1&include=route'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_extract(api_url):\n",
+    "    # Using requests module to access the MBTA website.\n",
+    "    # Using API key to prevent getting rate-limited.\n",
+    "    req_response = requests.get(api_url, auth=(user_name, key))   #Returns a json string\n",
+    "    #Letting the user know that accessing the website was successful (2xx = success)\n",
+    "    print('The status code is: ' + str(req_response.status_code))\n",
+    "    #Converting json string to dictionary for data extraction\n",
+    "    req_dict = json.loads(req_response.text)          \n",
+    "    #Accessing the value of the main key 'data', which is a list of dictionaries\n",
+    "    data_value = req_dict['data']\n",
+    "    #Return the list of dictionaries containing the data\n",
+    "    return data_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "req_response = requests.get('https://api-v3.mbta.com/stops?filter[route_type]=0,1&include=route', auth=(user_name, key))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_name = 'omar.str@gmail.com'\n",
+    "key = '2fbf2f24d7af4315a1e999a89c54811c'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "req_dict = json.loads(req_response.text)          \n",
+    "#Accessing the value of the main key 'data', which is a list of dictionaries\n",
+    "data_value_2 = req_dict['data']\n",
+    "#Return the list of dictionaries containing the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for listed_attr in data_value_2:                #Iterating through each dictionary in the data list\n",
+    "    current_attr = listed_attr['attributes']   #Extracting value for 'attribute' key\n",
+    "    stop_route = current_attr['description']         #Extracting string containing stop and route name\n",
+    "    route = re.findall(\"(?<=- ).*(?= -) | (?<=- ).*[?=\\)]\", stop_route) \n",
+    "    route_list += route"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "route_list = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Green Line', 'Orange Line', 'Green Line', 'Green Line', 'Blue Line', 'Red Line', 'Green Line', 'Mattapan Trolley', 'Green Line', 'Green Line', 'Green Line', 'Mattapan Trolley', 'Red Line', 'Green Line', 'Green Line', 'Red Line', 'Green Line', 'Red Line', 'Green Line', 'Blue Line', 'Orange Line', 'Orange Line', 'Orange Line', 'Red Line', 'Green Line', 'Green Line', 'Orange Line', 'Green Line', 'Green Line', 'Orange Line', 'Mattapan Trolley', 'Green Line', 'Green Line', 'Mattapan Trolley', 'Green Line', 'Orange Line', 'Red Line', 'Red Line', 'Green Line', 'Green Line', 'Blue Line', 'Green Line', 'Mattapan Trolley', 'Green Line', 'Green Line', 'Orange Line', 'Green Line', 'Blue Line', 'Blue Line', 'Green Line', 'Green Line', 'Red Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Mattapan Trolley', 'Green Line', 'Green Line', 'Red Line', 'Green Line', 'Blue Line', 'Green Line', 'Green Line', 'Mattapan Trolley', 'Green Line', 'Red Line', 'Red Line', 'Red Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Red Line', 'Orange Line', 'Orange Line', 'Orange Line', 'Green Line', 'Red Line', 'Green Line', 'Blue Line', 'Green Line', 'Green Line', 'Orange Line', 'Blue Line', 'Green Line', 'Red Line', 'Green Line', 'Orange Line', 'Blue Line', 'Green Line', 'Green Line', 'Red Line', 'Green Line', 'Blue Line', 'Red Line', 'Green Line', 'Green Line', 'Green Line', 'Blue Line', 'Orange Line', 'Green Line', 'Orange Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Orange Line', 'Green Line', 'Mattapan Trolley', 'Orange Line', 'Blue Line', 'Green Line', 'Red Line', 'Blue Line', 'Green Line', 'Orange Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Red Line', 'Blue Line', 'Red Line', 'Red Line', 'Blue Line', 'Mattapan Trolley', 'Orange Line', 'Orange Line', 'Green Line', 'Green Line', 'Orange Line', 'Orange Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Orange Line', 'Red Line', 'Red Line', 'Green Line', 'Orange Line', 'Green Line', 'Red Line', 'Green Line', 'Orange Line', 'Orange Line', 'Green Line', 'Green Line', 'Green Line', 'Red Line', 'Green Line', 'Red Line', 'Green Line', 'Green Line', 'Orange Line', 'Green Line', 'Blue Line', 'Red Line', 'Orange Line', 'Green Line', 'Green Line', 'Green Line', 'Orange Line', 'Red Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Red Line', 'Green Line', 'Green Line', 'Green Line', 'Red Line', 'Red Line', 'Mattapan Trolley', 'Red Line', 'Red Line', 'Green Line', 'Blue Line', 'Mattapan Trolley', 'Orange Line', 'Green Line', 'Green Line', 'Green Line', 'Red Line', 'Red Line', 'Blue Line', 'Orange Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Blue Line', 'Green Line', 'Red Line', 'Green Line', 'Green Line', 'Orange Line', 'Red Line', 'Orange Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Red Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Green Line', 'Red Line', 'Green Line', 'Green Line', 'Blue Line', 'Mattapan Trolley', 'Green Line', 'Red Line', 'Green Line', 'Red Line', 'Green Line', 'Green Line', 'Blue Line', 'Green Line', 'Green Line', 'Orange Line', 'Blue Line', 'Green Line', 'Blue Line', 'Red Line', 'Orange Line', 'Green Line', 'Mattapan Trolley', 'Green Line', 'Mattapan Trolley', 'Green Line', 'Blue Line', 'Orange Line']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(route_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Green Line', 'Orange Line', 'Blue Line', 'Red Line', 'Mattapan Trolley', 'Green Line ', 'Orange Line ', ' Green Line - (C)', 'Blue Line ', 'Red Line ', 'Mattapan Trolley ', ' Green Line - (B)', ' Green Line - (E)', ' Green Line - Kenmore & West/(E)', ' Green Line - (D)', ' Red Line - Alewife (from Braintree)', ' Red Line - Alewife (from Ashmont)', ' Green Line - (C) Cleveland Circle/(D)'])"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter(route_list).keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([132, 36, 24, 42, 14, 74, 36, 13, 24, 40, 14, 19, 11, 1, 13, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter(route_list).values()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
