Part 2a and b done. Want to clean up how I print 2c.

--- a/trainroutesNotebook.ipynb
+++ b/trainroutesNotebook.ipynb
@@ -20561,27 +20561,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 328,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The original dictionary is : {'Gfg': 11, 'CS': 11, 'geeks': 8, 'nerd': 2}\n",
+      "Keys with min values are : ['nerd']\n",
+      "Keys with max values are : ['Gfg', 'CS']\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_dict = {'Gfg' : 11, 'CS' : 11, 'geeks':8, 'nerd':2} \n",
+    "print(\"The original dictionary is : \" + str(test_dict)) \n",
+    "  \n",
+    "temp_min = min(test_dict.values()) \n",
+    "temp_max = max(test_dict.values()) \n",
+    "res1 = [key for key in test_dict if test_dict[key] == temp_min] \n",
+    "res2 = [key for key in test_dict if test_dict[key] == temp_max] \n",
+    "print(\"Keys with min values are : \" + str(res1)) \n",
+    "print(\"Keys with max values are : \" + str(res2)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Green Line': [], 'Orange Line': [], 'Green Line - (C)': [], 'Blue Line': [], 'Red Line': [], 'Mattapan Trolley': [], 'Green Line - (B)': [], 'Green Line - (E)': [], 'Green Line - (D)': []}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(route_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 342,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Present,  value = []\n",
+      "Not present\n"
+     ]
+    }
+   ],
+   "source": [
+    "def checkKey(dict, key): \n",
+    "      \n",
+    "    if key in dict.keys(): \n",
+    "        print(\"Present, \", end =\" \") \n",
+    "        print(\"value =\", dict[key]) \n",
+    "    else: \n",
+    "        print(\"Not present\") \n",
+    "  \n",
+    "# Driver Code \n",
+    "dict = {'116th': [], '110th':200, '103th':300} \n",
+    "  \n",
+    "key = '116th'\n",
+    "checkKey(dict, key) \n",
+    "  \n",
+    "key = '101st'\n",
+    "checkKey(dict, key) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sorted_data_list = []\n",
-    "route_list = []\n",
-    "for listed_attr in data_value_2:                     # Iterating through each dictionary in the data list\n",
-    "    current_attr = listed_attr['attributes']         # Extracting value for 'attribute' key\n",
-    "    stop_route = current_attr['description']         # Extracting string containing stop and route name\n",
-    "    route = re.findall(\"(?<=- ).* \\([A-Z]\\)\", stop_route)  \n",
-    "    if route == []:\n",
-    "        route = re.findall(\"(?<=- ).*(?= -)\", stop_route)\n",
-    "        if route == []: \n",
-    "            route = re.findall(\"(?<=- ).*\", stop_route)\n",
-    "            if route == []:\n",
-    "                route = [\"No Match\"]\n",
-    "    route_list += route #This is to easily count how many times a line shows up later\n",
-    "    route = []\n",
-    "    #This is to create a dictionary with 'lines' as keys and a list of 'stops' as value. Filtering repeated stops\n",
-    "    sorted_data_list += [{'description' : current_attr['description'], 'stop' : current_attr['name'], 'line' : route[0]}]\n",
-    "    "
+    "if s"
    ]
   }
  ],
