2ab&c done...well

--- a/trainroutesNotebook.ipynb
+++ b/trainroutesNotebook.ipynb
@@ -20638,12 +20638,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 357,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The status code is: 200\n",
+      "1. Long names for all Light Rail and Heavy Rail subway lines:\n",
+      "Red Line\n",
+      "Mattapan Trolley\n",
+      "Orange Line\n",
+      "Green Line B\n",
+      "Green Line C\n",
+      "Green Line D\n",
+      "Green Line E\n",
+      "Blue Line\n",
+      "['Red', 'Mattapan', 'Orange', 'Green-B', 'Green-C', 'Green-D', 'Green-E', 'Blue']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests     # Module for accessing website data\n",
+    "import json         # Module for parsing JSON resulting from request for data\n",
+    "from pprint import pprint\n",
+    "\n",
+    "#Setting variables for authentication\n",
+    "route_url = 'https://api-v3.mbta.com/routes?filter[type]=0,1'    #Accessing only the light (type:0) and heavy (type:1) rail types\n",
+    "user_name = 'omar.str@gmail.com'\n",
+    "key = '2fbf2f24d7af4315a1e999a89c54811c'\n",
+    "\n",
+    "def data_extract(api_url):\n",
+    "    # Using requests module to access the MBTA website.\n",
+    "    # Using API key to prevent getting rate-limited.\n",
+    "    req_response = requests.get(api_url, auth=(user_name, key))   #Returns a json string\n",
+    "    #Letting the user know that accessing the website was successful (2xx = success)\n",
+    "    print('The status code is: ' + str(req_response.status_code))\n",
+    "    #Converting json string to dictionary for data extraction\n",
+    "    req_dict = json.loads(req_response.text)          \n",
+    "    #Accessing the value of the main key 'data', which is a list of dictionaries\n",
+    "    data_value = req_dict['data']\n",
+    "    #Return the list of dictionaries containing the data\n",
+    "    return data_value\n",
+    "\n",
+    "\n",
+    "route_data = data_extract(route_url)\n",
+    "route_ids = []\n",
+    "\n",
+    "print('1. Long names for all Light Rail and Heavy Rail subway lines:')\n",
+    "for listed_attr in route_data:     # Iterating through each dictionary in the data list\n",
+    "    route_ids += [listed_attr['id']]\n",
+    "    current_attr = listed_attr['attributes']   # Extracting value for 'attribute' key\n",
+    "    long_name = current_attr['long_name']         # Extracting value of 'long_name' key\n",
+    "    print(long_name)\n",
+    "\n",
+    "print(route_ids)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 371,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple': [], 'applea': [3], 'ball': []}\n"
+     ]
+    }
+   ],
+   "source": [
+    "Definition = {'applea': [3], 'ball': []}\n",
+    "\n",
+    "if 'apple' in Definition.keys():\n",
+    "    Definition['apple'] += [5]\n",
+    "    #Definition.update({'apple': []})\n",
+    "else:\n",
+    "    #Definition['apple'] += [5]\n",
+    "    Definition.update({'apple': []})\n",
+    "pprint(Definition)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "if s"
-   ]
+   "source": []
   }
  ],
  "metadata": {
