Part 3 can now return correct answer when 3 routes are involved.

--- a/trainroutesNotebook.ipynb
+++ b/trainroutesNotebook.ipynb
@@ -20723,10 +20723,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Take ['a', 'b', 'c'], {'c'}, ['e', 't', 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "mylist1 = ['a', 'b', 'c']\n",
+    "mylist2 = ['e', 't', 'c']\n",
+    "let = 'p'\n",
+    "if bool(set(mylist1) & set(mylist2)) == True:\n",
+    "        connections = set(mylist1) & set(mylist2)\n",
+    "        print(\"Take \" + str(mylist1) + \", \" + str(connections) + \", \" + str(mylist2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "if bool(set(route_conn_dict[route_s1] & set(route_conn_dict[route_s2]))) == True:\n",
+    "                    connections = set(route_conn_dict[route_s1] & set(route_conn_dict[route_s2])\n",
+    "                    print(\"Take \" + str(route_s1) + \", \" + str(connections) + \", \" + str(route_s2))\n",
+    "                    route_found == True"
+   ]
   }
  ],
  "metadata": {
